# JsEval

./: .clang-format  CMakeLists.txt  readme.md
Include/JsEval/: JsEval.h
demo/: CMakeLists.txt  demo.cpp  main.cpp
quickjs/: CMakeLists.txt  quickjs.hpp
quickjs/runtime/: quickjs-js-math.h
